--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="ps-5 showBanner bannerText">
                 <span><h1><span class="bigus">DISCOVER</span> the</span></h1></span>
                 <span><h1><span class="bigus">MAGIC</span><span> of </span><span class="bigus">MUSIC</span></h1></span><br>
-                <button type="submit" class="btn rounded-0 btn-lg-lg btn-outline-light">See More</button>
+                <a href="about.html"><button type="submit" class="btn rounded-0 btn-lg btn-outline-light">See More</button></a>
              </div>
         </div>
     </div>
@@ -77,8 +77,8 @@
                             <span class="spanAdjectives">Raucous</span>
                         </div>
                 </div>
-                <p class="pt-md-4">A music company called Ampli.fy manages many bands and events, primarily local artists. A music company called Ampli.fy manages many bands and events, primarily local artists.</p>
-                <button type="submit" class="btn btn-lg-lg rounded-0 btn-outline-light">LEARN MORE</button>
+                <p class="pt-md-4">A music company called Ampli.fy manages many bands and events, primarily Philippines local artists. A music company called Ampli.fy manages many bands and events, primarily local artists.</p>
+                <button type="submit" class="btn btn-lg rounded-0 btn-outline-light">SEE MORE</button>
             </div>
             <div class="col-lg-7 p-4">
                 <img src="assets/banner.jpg" class="img-fluid w-100" alt="">
@@ -88,12 +88,13 @@
 <!--Band Details-->
     <div class="container pt-3">
         <div class="row">
-            <div class="p-4 pb-lg-2 d-md-none text-justify ctnText">
-                <h2>BANDS</h2>
+            <div class="p-4 pb-lg-2 d-lg-none ctnText">
+                <h2>LOCAL BANDS</h2>
             </div> 
-            <div class="col-lg-5 p-4 justify-content-center"> 
-                <img src="assets/BenAndBen.jpg" class="img-fluid w-100 bandsImage" alt="">
-                <h3 class="pt-4">Ben & Ben </h3>
+            <div class="col-lg-5 p-4 ctnText"> 
+                <img src="assets/BenAndBen.jpg" class="img-fluid w-100 d-none d-lg-block bandsImage" alt="Ben & Ben">
+                <img src="assets/BenAndBen2.jpg" class="img-fluid w-100 d-lg-none bandsImage" alt="Ben & Ben">
+                <h3 class="pt-4">BEN & BEN</h3>
                 <p>With their poignant lyrics, distinctive musicality, and electrifying stage presence, Ben&Ben has won the hearts of many.</p>
                 <div class="progress" style="height: 1px;">
                     <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -101,42 +102,45 @@
             </div>
 
             <div class="col-lg-7 pt-lg-5 mt-lg-5 p-4 ctnText">
-                <h2>LOCAL BANDS</h2>
-                <img src="assets\sample.jpg" class="img-fluid pt-lg-5 bandsImage" alt="">
-                <h3 class="pt-4">IV of Spades</h3>
+                <h2 class="d-none d-lg-block">LOCAL BANDS</h2>
+                <img src="assets/decemberAvenue.jpg" class="img-fluid pt-lg-5 bandsImage" alt="">
+                <h3 class="pt-4">DECEMBER AVENUE</h3>
+                <p>Reflects the band's repertoire, which primarily discusses life, love, and moving on "December" is the final month of the year, a gateway to the new year/new life.</p>
+                <div class="progress" style="height: 1px;">
+                    <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+            </div>
+            <div class="col-lg-7 p-4 pt-lg-5 mt-lg-5 ctnText">
+                <img src="assets/silent_sanctuary.jpg" class="img-fluid bandsImage bandsImage" alt="">
+                <h3 class="pt-4">SILENT SANCTUARY</h3>
+                <p>A rock band that includes violins and a cello. Most people have had mixed reactions to this mixture; some are amazed, some are skeptical, and some are simply curious.</p>
+                <div class="progress" style="height: 1px;">
+                    <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+            </div>
+            <div class="col-lg-5 p-4 ctnText"> 
+                <img src="assets/IVspades2.jpg" class="img-fluid w-100 d-none d-lg-block bandsImage" alt="">
+                <img src="assets/sample.jpg" class="img-fluid w-100 d-lg-none bandsImage" alt="">
+                <h3 class="pt-4">IV OF SPADES</h3>
                 <p>A rock group from Metro Manila, the Philippines, is called IV of Spades. The local press has described their music as "pop funk" and "funk rock."</p>
                 <div class="progress" style="height: 1px;">
                     <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
             </div>
-            <div class="col-lg-5 p-4">
-                <img src="assets/decemberAvenue.jpg" class="img-fluid bandsImage" alt="">
-                <h3 class="pt-4">December Avenue</h3>
-                <p>reflects the band's repertoire, which primarily discusses life, love, and moving on "December" is the final month of the year, a gateway to the new year/new life.</p>
-                <div class="progress" style="height: 1px;">
-                    <div class="progress-bar bg-light progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-            </div>
-            <div class="col-lg-7 p-4 justify-content-center"> 
-                <img src="assets/decemberAvenue.jpg" class="img-fluid w-100 bandsImage" alt="">
-                <h3 class="pt-4">IV of Spades </h3>
-                <p>A rock group from Metro Manila, the Philippines, is called IV of Spades. The local press has described their music as "pop funk" and "funk rock."</p>
-                <div class="progress" style="height: 1px;">
-                    <div class="progress-bar bg-light progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-            </div>
         </div>
     </div>
     <!--banner-->
-    <div class="container-fluid p-0">
-        <div style="position: relative;" class="homeBanner">
-            <img src="assets/coverbanner.jpg" class="img-fluid w-100" style="min-height: 584px; max-height: 585px;" alt="">
-            <div class="ps-5 showBanner bannerText">
-                <span><h1><span class="bigus">BEN</span><span> & </span><span  class="bigus">BEN</span></h1></span>
-                <span><h1><span class="bigus">Tickets are now Available!</span></h1></span><br>
-                <span style="font-size: 2vw;">2022 &#9679; MARCH-JUNE &#9679; PHILIPPINES</span>
-             </div>
-        </div>
+    <div class="container-fluid p-0 py-4 d-none d-lg-block">
+        <a href="reserve.html" style="color: white; text-decoration: none;">
+            <div style="position: relative;" class="homeBanner">
+                <img src="assets/coverbanner.jpg" class="img-fluid w-100" style="min-height: 584px; max-height: 585px;" alt="">
+                <div class="ps-5 showBanner bannerText">
+                    <span><h1><span style="font-size: 6vw; font-weight: 900;">Tickets are now Available!</span></h1></span>
+                    <span><h1><span style="font-size: 6vw; font-weight: 900;">BEN</span><span> & </span><span style="font-size: 6vw; font-weight: 900;">BEN</span></h1></span><br>
+                    <span style="font-size: 2vw;">2022 &#9679; MARCH-JUNE &#9679; PHILIPPINES</span>
+                </div>
+            </div>
+        </a>
     </div>
 
     <!--Avail tickets-->
@@ -146,100 +150,87 @@
             <div class="d-flex w-sm-100 w-md-50 justify-content-center order-md-2">
                 <img id="benben" class="image-fluid w-100" src="assets/ben&ben-min.jpg" alt="benenbenlog">
             </div>
-            <div class="d-flex justify-content-center w-sm-50 order-md-1">
+            <div class="d-flex justify-content-center w-sm-50 order-md-1 ctnText">
                 <div>
                     <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates: Ben & Ben</h2></span></div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" id="band-sched" band-name="Ben & Ben">
-                        <div><h3 class="datemd">3.21</b></h3></div>
+                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">3.21</b></h3></div>
                         <div class="px-md-2 px-lg-5 ">
                             <div><h4 class="country">Edinbro</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales" role="button" href="#">BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block" role="button" href="#">BUY NOW</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
-                        <div><h3 class="datemd">4.01</h3></div>
+                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">4.01</h3></div>
                         <div class="px-md-2 px-lg-5">
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block"> BUY NOW</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
-                        <div><h3 class="datemd">5.30</h3></div>
+                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">5.30</h3></div>
                         <div class="px-md-2 px-lg-5">
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block"> BUY NOW</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
-                        <div><h3 class="datemd">6.20</h3></div>
+                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">6.20</h3></div>
                         <div class="px-md-2 px-lg-5">
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                        <button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block"> BUY NOW</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!--Contact information-->
+    <div class="container-fluid p-0 pt-5">
+        <div style="position: relative;">
+            <img src="assets/test.jpg" class="img-fluid w-100" style="min-height: 584px; max-height: 585px;" alt="">
+            <div class="text-center pt-5" style="position: absolute; top:0;">
+              </div>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 px-1">
-                <img src="assets/sample.jpg" class="img-fluid mt-4 pt-3 px-2">
+            <div class="text-center py-5">
+            <h1 class="display-1">LET'S <br> ROCK!</h1>
+            <p>If you have any questions or comments, please email us or call 123-456-7890.<br> We would be delighted to answer your questions and arrange a meeting with you.<br> Ampli.fy music can help you stand out from the crowd!</p>
+            <button type="button" class="btn btn-light text-center rounded-0 btn-lg">CONTACT</button>
             </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 sm text-center pt-5">
-          <h1 class="display-1">LET'S <br> CHAT!</h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12 sm text-center pt-5 ">
-          <h5 style="font-family: arial;" >Got a question, comment or a collaboration idea? Great, let us hear it 
-            – we’re <BR> all about community and two-way communication here at Elisha. </h5>
-        </div>
-    </div>
-    <div class="button pt-5" style="text-align-last:center">
-        <button type="button" class="btn btn-dark text-center rounded-0 btn-lg" href="../html/contact.html">CONTACT</button>
-    </div>
-</div>
 <!--footer-->
     <footer>
         <script>
             $("footer").load("footer.html");
         </script>
     </footer>
+<!--javascript and jquery functions-->
     <script>
-    $(document).ready(function () {
-        $('.showBanner').fadeIn(2200);
-    });
-    $(function(){
-        $('.bandsImage').hover(function(){
-                $(this).siblings('.progress').children('.progressBar').attr('aria-valuenow','100').css('width','100%');
-                $(this).css('object-fit','none');
-                $(this).css('cursor', 'pointer');
-            },
-            function(){
-                $('.progressBar').attr('aria-valuenow','0').css('width','0%');
-                $(this).css('object-fit','cover');
+        $(document).ready(function () {
+            $('.showBanner').fadeIn(2500);
         });
-    });
-    // $(function() {
-    //     $('h1').hover(function(){
-    //         $('span').css('color', '#345B63');
-    //     },
-    //     function(){
-    //        $('span').css('color', '#D4ECDD');
-    //     });
-    // });
-    // </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+        $(function(){
+            $('.bandsImage').hover(function(){
+                    $(this).siblings('.progress').children('.progressBar').attr('aria-valuenow','100').css('width','100%');
+                    $(this).css('object-fit','none');
+                    $(this).css('cursor', 'pointer');
+                },
+                function(){
+                    $('.progressBar').attr('aria-valuenow','0').css('width','0%');
+                    $(this).css('object-fit','cover');
+            });
+        });
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+    </script>
 </body>
 </html>
