--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
     <link rel="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.29/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -68,11 +70,11 @@
         <div class="container " >
             <div class="row mx-auto justify-content-sm-center">
                 <div class="col-12 col-sm-12 col-lg-6 text-center" style="color: white;"id="TheStory">
-                    <h1 class="display-1 mt-4font-weight-bold pt-3"><strong>Our Story</h1></strong>
+                    <h1  id="story">Our Story</h1>
                     <div class="col-12 col-sm-12 col-lg-12 text-center px-3" id="amplistory">
-                        <span class="text-center" style="color: white; padding-top: 3px;" >Ampli.fy is built during the boot camp training of the developers under the Cadetship Program of Asticom Year 2022. 
+                        <span class="text-center" style="color: white; padding-top: 3px; justify-content: center;" >Ampli.fy was built during the boot camp training of the developers under the Cadetship Program of Asticom Year 2022. 
                             This website's goal is to provide a list of bands in the Philippines, as well as their songs and the dates of their upcoming shows or concerts.
-                             This concept was the result of the brainstorming of the developers who did their research on what the best concept that they could provide to others was.</span><br>
+                             This concept was the result of the brainstorming of the developers who did their research on what's the best concept that they could provide to others.</span><br>
                     </div><br>
                 </div>
                 <div class="col-md-6 col-sm-12 col-12 text-center pb-5">
@@ -92,7 +94,7 @@
             <div class="container">
                 <div class="section ourTeam">
                     <header class="text-center">
-                        <h2>Meet <strong>Our Team</strong></h2>
+                        <h2>MEET <strong>OUR TEAM</strong></h2>
                     </header>
                     <div class="row">
                         <div class="col-xs-6 col-sm-4 col-md-4 i">
@@ -100,27 +102,7 @@
                                 <div class="wrap">
                                     <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="#" width="270" height="270" class="img-responsive">
                                     <div class="info">
-                                        <h3 class="name">Mendrix Manlangit</h3>
-                                        <h4 class="position">Developer</h4>
-                                    </div>
-                                </div>
-                                <div class="more">
-                                    <p>Ut sed consectetur ligula. Aenean id nibh accumsan, pre tium nulla in, lacinia aecenas mollis. Sed mauris at sollicitudin. Etiam maximus mauris vel leo mattis, non venenatis magna finibus vestibulum.</p>
-                                    <div class="socials">
-                                        <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                                        <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                                        <a href="#" title="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                                        <a href="#" title="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 col-sm-4 col-md-4 i">
-                            <div class="c text-center">
-                                <div class="wrap">
-                                    <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="#" width="270" height="270" class="img-responsive">
-                                    <div class="info">
-                                        <h3 class="name">Lyca Castro</h3>
+                                        <h3 class="name">Mendrix</h3>
                                         <h4 class="position">Developer</h4>
                                     </div>
                                 </div>
@@ -140,7 +122,27 @@
                                 <div class="wrap">
                                     <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="#" width="270" height="270" class="img-responsive">
                                     <div class="info">
-                                        <h3 class="name">John Michael Joaquin</h3>
+                                        <h3 class="name">Lyca</h3>
+                                        <h4 class="position">Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="more">
+                                    <p>Ut sed consectetur ligula. Aenean id nibh accumsan, pre tium nulla in, lacinia aecenas mollis. Sed mauris at sollicitudin. Etiam maximus mauris vel leo mattis, non venenatis magna finibus vestibulum.</p>
+                                    <div class="socials">
+                                        <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                                        <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                                        <a href="#" title="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                                        <a href="#" title="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4 col-md-4 i"> 
+                            <div class="c text-center">
+                                <div class="wrap">
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="#" width="270" height="270" class="img-responsive">
+                                    <div class="info">
+                                        <h3 class="name">John Michael</h3>
                                         <h4 class="position">Developer</h4>
                                     </div>
                                 </div>
@@ -173,7 +175,7 @@
                     – we’re <BR> all about community and two-way communication here at Ampli.fy. </h5>
                 </div>
             </div>
-            <div class="button pt-5 px-2" style="text-align-last:center">
+            <div class="button pt-5 px-2 py-5" style="text-align-last:center">
                 <button type="button" class="btn btn-dark text-center rounded-0 btn-lg " href="contact.html">CONTACT</button>
             </div>
         </div>
