--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                         </div>
                 </div>
                 <p class="pt-md-4">A music company called Ampli.fy manages many bands and events, primarily Philippines local artists. A music company called Ampli.fy manages many bands and events, primarily local artists.</p>
-                <button type="submit" class="btn btn-lg rounded-0 btn-outline-light">SEE MORE</button>
+                <a href="about.html"><button type="submit" class="btn btn-lg rounded-0 btn-outline-light">SEE MORE</button></a>
             </div>
             <div class="col-lg-7 p-4">
-                <img src="assets/banner.jpg" class="img-fluid w-100" alt="">
+                <img src="assets/singer.jpg" class="img-fluid w-100" alt="">
             </div>
         </div>
     </div>
@@ -89,43 +89,51 @@
     <div class="container pt-3">
         <div class="row">
             <div class="p-4 pb-lg-2 d-lg-none ctnText">
-                <h2>LOCAL BANDS</h2>
+                <h2>OPM BANDS</h2>
             </div> 
-            <div class="col-lg-5 p-4 ctnText"> 
-                <img src="assets/BenAndBen.jpg" class="img-fluid w-100 d-none d-lg-block bandsImage" alt="Ben & Ben">
-                <img src="assets/BenAndBen2.jpg" class="img-fluid w-100 d-lg-none bandsImage" alt="Ben & Ben">
-                <h3 class="pt-4">BEN & BEN</h3>
-                <p>With their poignant lyrics, distinctive musicality, and electrifying stage presence, Ben&Ben has won the hearts of many.</p>
-                <div class="progress" style="height: 1px;">
-                    <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+            <div class="col-lg-5 p-4 ctnText">
+                <div class="ctnBands"> 
+                    <img src="assets/BenAndBen.jpg" class="img-fluid w-100 d-none d-lg-block bandsImage" alt="Ben & Ben">
+                    <img src="assets/BenAndBen2.jpg" class="img-fluid w-100 d-lg-none bandsImage" alt="Ben & Ben">
+                    <h3 class="pt-4">BEN & BEN</h3>
+                    <p>With their poignant lyrics, distinctive musicality, and electrifying stage presence, Ben&Ben has won the hearts of many.</p>
+                    <div class="progress" style="height: 1px;">
+                        <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
             </div>
 
             <div class="col-lg-7 pt-lg-5 mt-lg-5 p-4 ctnText">
-                <h2 class="d-none d-lg-block">LOCAL BANDS</h2>
-                <img src="assets/decemberAvenue.jpg" class="img-fluid pt-lg-5 bandsImage" alt="">
-                <h3 class="pt-4">DECEMBER AVENUE</h3>
-                <p>Reflects the band's repertoire, which primarily discusses life, love, and moving on "December" is the final month of the year, a gateway to the new year/new life.</p>
-                <div class="progress" style="height: 1px;">
-                    <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                <h2 class="d-none d-lg-block">OPM BANDS</h2>
+                <div class="ctnBands">
+                    <img src="assets/decemberAvenue.jpg" class="img-fluid pt-lg-5 bandsImage" alt="">
+                    <h3 class="pt-4">DECEMBER AVENUE</h3>
+                    <p>Reflects the band's repertoire, which primarily discusses life, love, and moving on "December" is the final month of the year, a gateway to the new year/new life.</p>
+                    <div class="progress" style="height: 1px;">
+                        <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-7 p-4 pt-lg-5 mt-lg-5 ctnText">
-                <img src="assets/silent_sanctuary.jpg" class="img-fluid bandsImage bandsImage" alt="">
-                <h3 class="pt-4">SILENT SANCTUARY</h3>
-                <p>A rock band that includes violins and a cello. Most people have had mixed reactions to this mixture; some are amazed, some are skeptical, and some are simply curious.</p>
-                <div class="progress" style="height: 1px;">
-                    <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                <div class="ctnBands">
+                    <img src="assets/silent_sanctuary.jpg" class="img-fluid bandsImage bandsImage" alt="">
+                    <h3 class="pt-4">SILENT SANCTUARY</h3>
+                    <p>A rock band that includes violins and a cello. Most people have had mixed reactions to this mixture; some are amazed, some are skeptical, and some are simply curious.</p>
+                    <div class="progress" style="height: 1px;">
+                        <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-5 p-4 ctnText"> 
-                <img src="assets/IVspades2.jpg" class="img-fluid w-100 d-none d-lg-block bandsImage" alt="">
-                <img src="assets/sample.jpg" class="img-fluid w-100 d-lg-none bandsImage" alt="">
-                <h3 class="pt-4">IV OF SPADES</h3>
-                <p>A rock group from Metro Manila, the Philippines, is called IV of Spades. The local press has described their music as "pop funk" and "funk rock."</p>
-                <div class="progress" style="height: 1px;">
-                    <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+            <div class="col-lg-5 p-4 ctnText">
+                <div class="ctnBands"> 
+                    <img src="assets/IVspades2.jpg" class="img-fluid w-100 d-none d-lg-block bandsImage" alt="">
+                    <img src="assets/sample.jpg" class="img-fluid w-100 d-lg-none bandsImage" alt="">
+                    <h3 class="pt-4">IV OF SPADES</h3>
+                    <p>A rock group from Metro Manila, the Philippines, is called IV of Spades. The local press has described their music as "pop funk" and "funk rock."</p>
+                    <div class="progress" style="height: 1px;">
+                        <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -145,21 +153,21 @@
 
     <!--Avail tickets-->
     <div class="container">
-        <div class="d-md-block d-none pt-4"><span><h2>Upcoming Dates: Ben & Ben</h2></span></div>
+        <div class="d-md-block d-none pt-4"><span><h2>Upcoming Dates: </h2></span></div>
         <div class="d-flex flex-column flex-md-row justify-content-center justify-content-sm-around">
-            <div class="d-flex w-sm-100 w-md-50 justify-content-center order-md-2">
-                <img id="benben" class="image-fluid w-100" src="assets/ben&ben-min.jpg" alt="benenbenlog">
+            <div class="d-flex w-sm-100 w-md-50 justify-content-center ps-lg-5 order-md-2">
+                <a href="reserve.html"><img id="benben" class="image-fluid w-100" src="assets/ben&ben-min.jpg" alt="benenbenlog"></a>
             </div>
             <div class="d-flex justify-content-center w-sm-50 order-md-1 ctnText">
                 <div>
-                    <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates: Ben & Ben</h2></span></div>
-                    <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" id="band-sched" band-name="Ben & Ben">
-                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">3.21</b></h3></div>
+                    <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates: </h2></span></div>
+                    <div class="d-flex flex-column flex-md-row me-lg-5 py-4 justify-content-sm-between" id="band-sched" band-name="Ben & Ben">
+                        <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">3.25</b></h3></div>
                         <div class="px-md-2 px-lg-5 ">
                             <div><h4 class="country">Edinbro</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block" role="button" href="#">BUY NOW</button>
+                        <!--<button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block" role="button" href="#">BUY NOW</button>-->
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">4.01</h3></div>
@@ -167,7 +175,6 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block"> BUY NOW</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
                         <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">5.30</h3></div>
@@ -175,7 +182,6 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block"> BUY NOW</button>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3 style="font-size: calc(1.3rem + 2.5vw);font-weight: 900;">6.20</h3></div>
@@ -183,27 +189,29 @@
                             <div><h4 class="country">Edinburgh, UK</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
-                        <button class="btn btn-dark rounded-0 btn-sales d-none d-lg-block"> BUY NOW</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!--Contact information-->
-    <div class="container-fluid p-0 pt-5">
-        <div style="position: relative;">
+    <div class="container-fluid p-0 pt-5 pb-1 d-none d-lg-block">
+        <div style="position: relative;" class="homeBanner">
             <img src="assets/test.jpg" class="img-fluid w-100" style="min-height: 584px; max-height: 585px;" alt="">
-            <div class="text-center pt-5" style="position: absolute; top:0;">
-              </div>
+            <div class="ps-5 showBanner bannerText" style="top: 300px;">
+                <span><h1><span style="font-size: 6vw; font-weight: 900;">MOVE THE BEAT!</span></h1></span>
+                <p class="text-justify">If you have any questions or comments, please email us or call 123-456-7890.<br> We would be delighted to answer your questions and arrange a meeting with you.<br> Ampli.fy music can help you stand out from the crowd!</p>
+                <button type="button" class="btn btn-light text-center rounded-0 btn-lg">CONTACT</button>
+            </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="text-center py-5">
-            <h1 class="display-1">LET'S <br> ROCK!</h1>
-            <p>If you have any questions or comments, please email us or call 123-456-7890.<br> We would be delighted to answer your questions and arrange a meeting with you.<br> Ampli.fy music can help you stand out from the crowd!</p>
-            <button type="button" class="btn btn-light text-center rounded-0 btn-lg">CONTACT</button>
-            </div>
+    <div class="container d-lg-none">
+        <div class="row px-3 py-4">
+            <div class=" text-center">
+                <span><h1><span style="font-size: 44px; font-weight: 900;">MOVE THE BEAT!</span></h1></span>
+                <p class="text-justify">If you have any questions or comments, please email us or call 123-456-7890. We would be delighted to answer your questions and arrange a meeting with you. Ampli.fy music can help you stand out from the crowd!</p>
+                <button type="button" class="btn btn-light text-center rounded-0 btn-lg">CONTACT</button>
+          </div>
         </div>
     </div>
 <!--footer-->
@@ -220,12 +228,10 @@
         $(function(){
             $('.bandsImage').hover(function(){
                     $(this).siblings('.progress').children('.progressBar').attr('aria-valuenow','100').css('width','100%');
-                    $(this).css('object-fit','none');
                     $(this).css('cursor', 'pointer');
                 },
                 function(){
                     $('.progressBar').attr('aria-valuenow','0').css('width','0%');
-                    $(this).css('object-fit','cover');
             });
         });
     </script>
