--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<hr>
+<hr class="mt-0">
 <div class="d-flex flex-wrap">
     <div class="px-4 pt-2 ms-sm-5 ms-lg-0" style="max-width: 500px;">
         <h4>Subscribe</h4>
