update about and bands
adjust banner and whole page of bands

--- a/bands.html
+++ b/bands.html
@@ -55,28 +55,18 @@
             </div>
         </div>
     </nav>
-    <!--banner
-    <main style="background-color:white">
-        <div class="row px-0 ">
-            <div class="col-12 position-relative mb-5 ">
-                <H1 class="position-absolute position-absolute top-50 start-50 translate-middle btn-lg rounded-0" href="blog.html"
-                    style="color: white; font-size: 60px">BANDS</H1>
-                <img src="assets/banner2.jpg" class="img-fluid mt-4 pt-1 px-1 ">
-            </div>
-        </div> -->
-        <div class="row px-0 ">
-            <div class="col-12 position-relative mb-5 ">
-        <div class="image-wrap">
-            <div class="img-content">
-                <img src="assets/BANNER3.jpg" alt="">
-            </div>
-            <div class="overlay"></div>
-        </div>
-    </div>
-        <div class="banner-content">
-            <h1 class="position-absolute position-absolute top-50 start-50 translate-middle btn-lg rounded-0"><span> BANDS</span></h1></div>
-        <div container-fluid px-5>
-            <h1 class="display-1 display-font-sizes: 4.5rem text-center">FULL LENGTH ALBUMS</h1>
+    <!--banner-->
+      <section  id="reserve" class="container-fluid px-0 w-100">
+            <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="assets/banner.jpg" alt="">
+            <div id="banner-saying">
+                <div id="absolute">
+                    <span><h1 class="bigus">Listen <span id="ban-text">to</span>  NEW <span class="bigus">MUSIC</span></h1></span>
+                    
+                </div>
+            </div>    
+        </section>
+            <!--end banner-->
+            <h1 class=" text-center pt-5">FULL LENGTH <br>ALBUMS</h1>
         </div>
     </div>
 <br> 
@@ -150,7 +140,7 @@
         </div>
         <!--End Divider-->
         <div container-fluid px-5 py-5>
-            <h1 class="display-1 display-font-sizes: 4.5rem text-center">OPM BANDS</h1>
+            <h1 class="text-center">OPM BANDS</h1>
         </div><br>
 
         <!--embed-->
@@ -224,7 +214,7 @@
       <!--end embed-->
      
       <div container-fluid px-5 py-5>
-        <h1 class="display-1 display-font-sizes: 4.5rem text-center">BEST OF OPM</h1>
+        <h1 class=" text-center">BEST OF OPM</h1>
     </div><br>
       <!--BEST-->
       <div class="container">
